--- a/src/main/resources/com/example/sociologicaldb_frontend/frames/CorrelationFrame.fxml
+++ b/src/main/resources/com/example/sociologicaldb_frontend/frames/CorrelationFrame.fxml
@@ -37,8 +37,12 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
+<?import java.net.URL?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sociologicaldb_frontend.frames.CorrelationFrameController">
-   <children>
+    <stylesheets>
+        <URL value="@../image/styles.css" />
+    </stylesheets>
+    <children>
       <TabPane fx:id="tabPane" layoutY="86.0" prefHeight="289.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" visible="false" AnchorPane.bottomAnchor="24.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="86.0">
          <tabs>
             <Tab text="Таблица">
