--- a/src/main/resources/com/example/sociologicaldb_frontend/frames/MaiStepOneFrame.fxml
+++ b/src/main/resources/com/example/sociologicaldb_frontend/frames/MaiStepOneFrame.fxml
@@ -4,8 +4,12 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
+<?import java.net.URL?>
 <AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="com.example.sociologicaldb_frontend.frames.MAIStepOneFrameController">
+   <stylesheets>
+      <URL value="@../image/styles.css" />
+   </stylesheets>
    <children>
       <Label alignment="CENTER" layoutX="115.0" layoutY="14.0" prefHeight="20.0" prefWidth="135.0" text="I уровень иерархии" textAlignment="CENTER" wrapText="true" />
       <Label alignment="CENTER" layoutX="386.0" layoutY="14.0" prefHeight="20.0" prefWidth="135.0" text="II уровень иерархии" textAlignment="CENTER" wrapText="true" />
