--- a/src/main/resources/com/example/sociologicaldb_frontend/frames/UploadFrame.fxml
+++ b/src/main/resources/com/example/sociologicaldb_frontend/frames/UploadFrame.fxml
@@ -4,7 +4,11 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
+<?import java.net.URL?>
 <AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sociologicaldb_frontend.frames.UploadFrameController">
+   <stylesheets>
+      <URL value="@../image/styles.css" />
+   </stylesheets>
    <children>
       <Label alignment="CENTER_RIGHT" layoutX="85.0" layoutY="90.0" prefHeight="33.0" prefWidth="163.0" text="Название исследования:" />
       <ComboBox fx:id="nameField" layoutX="255.0" layoutY="94.0" prefWidth="150.0" />
