--- a/src/main/resources/com/example/sociologicaldb_frontend/image/styles.css
+++ b/src/main/resources/com/example/sociologicaldb_frontend/image/styles.css
@@ -20,7 +20,11 @@
 
 .combo-box-base {
     -fx-background-color: white;
+    -fx-border-color: gray; /* Цвет границы */
+    -fx-border-width: 1;     /* Ширина границы */
+    -fx-border-radius: 4;    /* Радиус скругления углов границы */
 }
+
 .combo-box-base .arrow-button .arrow {
-    -fx-background-color: black;
+    -fx-background-color: black; /* Цвет стрелки */
 }
