--- a/src/main/resources/com/example/sociologicaldb_frontend/frames/UploadFrame.fxml
+++ b/src/main/resources/com/example/sociologicaldb_frontend/frames/UploadFrame.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<?import java.net.URL?>
 <AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sociologicaldb_frontend.frames.UploadFrameController">
    <stylesheets>
       <URL value="@../image/styles.css" />
@@ -22,7 +22,7 @@
             <Image url="@../image/unn_logo.png" />
          </image>
       </ImageView>
-      <Label fx:id="statusLabel" layoutX="175.0" layoutY="250.0" prefHeight="30.0" prefWidth="183.0" textAlignment="CENTER" AnchorPane.bottomAnchor="74.0" AnchorPane.leftAnchor="175.0" AnchorPane.rightAnchor="141.60000000000002" AnchorPane.topAnchor="250.0" />
+      <Label fx:id="statusLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="175.0" layoutY="256.0" prefHeight="30.0" prefWidth="183.0" AnchorPane.bottomAnchor="68.0" AnchorPane.leftAnchor="175.0" AnchorPane.rightAnchor="141.60000000000002" AnchorPane.topAnchor="256.0" />
       <Label alignment="CENTER_RIGHT" layoutX="85.0" layoutY="134.0" prefHeight="26.0" prefWidth="163.0" text="Название организации:" />
       <TextField fx:id="organizationName" layoutX="256.0" layoutY="135.0" />
    </children>
