--- a/src/main/resources/com/example/sociologicaldb_frontend/frames/VariationFrame.fxml
+++ b/src/main/resources/com/example/sociologicaldb_frontend/frames/VariationFrame.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.*?>
+<?import javafx.scene.chart.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<?import java.net.URL?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sociologicaldb_frontend.frames.VariationFrameController">
    <stylesheets>
       <URL value="@../image/styles.css" />
@@ -24,7 +25,9 @@
             </Tab>
             <Tab text="Графики">
                <content>
-                  <AnchorPane fx:id="graphPane" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  <AnchorPane fx:id="graphPane" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <PieChart fx:id="pieChart" layoutX="70.0" layoutY="30.0" prefHeight="200.0" prefWidth="450.0" />
+                  </AnchorPane>
                </content>
             </Tab>
          </tabs>
