--- a/src/main/resources/com/example/sociologicaldb_frontend/image/styles.css
+++ b/src/main/resources/com/example/sociologicaldb_frontend/image/styles.css
@@ -28,3 +28,11 @@
 .combo-box-base .arrow-button .arrow {
     -fx-background-color: black; /* Цвет стрелки */
 }
+
+.table-view .column-header {
+    -fx-background-color: #0f68aa;
+    -fx-text-fill: white;
+}
+.table-view .column-header .label {
+    -fx-text-fill: white;
+}
