--- a/src/main/resources/com/example/sociologicaldb_frontend/frames/CorrelationFrame.fxml
+++ b/src/main/resources/com/example/sociologicaldb_frontend/frames/CorrelationFrame.fxml
@@ -32,12 +32,12 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import java.net.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<?import java.net.URL?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sociologicaldb_frontend.frames.CorrelationFrameController">
     <stylesheets>
         <URL value="@../image/styles.css" />
@@ -49,7 +49,7 @@
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="274.0" prefWidth="600.0">
                      <children>
-                        <TableView fx:id="tableView" layoutX="63.0" layoutY="21.0" prefHeight="234.0" prefWidth="484.0" />
+                        <TableView fx:id="tableView" layoutX="63.0" layoutY="21.0" prefHeight="234.0" prefWidth="484.0" AnchorPane.bottomAnchor="5.599999999999994" AnchorPane.leftAnchor="63.0" AnchorPane.rightAnchor="52.799999999999955" AnchorPane.topAnchor="21.0" />
                      </children>
                   </AnchorPane>
                </content>
@@ -61,7 +61,7 @@
             <Image url="@../image/unn_logo.png" />
          </image>
       </ImageView>
-      <GridPane layoutX="90.0" prefHeight="82.0" prefWidth="296.0" AnchorPane.leftAnchor="90.0" AnchorPane.rightAnchor="214.0" AnchorPane.topAnchor="5.0">
+      <GridPane layoutX="90.0" prefHeight="82.0" prefWidth="296.0" AnchorPane.leftAnchor="90.0" AnchorPane.topAnchor="5.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="128.199951171875" minWidth="10.0" prefWidth="99.39998779296874" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="186.4000122070312" minWidth="10.0" prefWidth="186.4000122070312" />
@@ -87,6 +87,6 @@
             <ComboBox fx:id="tableNameTwo" prefHeight="26.0" prefWidth="160.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
-      <Button layoutX="415.0" layoutY="33.0" mnemonicParsing="false" onAction="#onCalcCorrelationButtonClick" prefHeight="26.0" prefWidth="90.0" text="Вычислить" AnchorPane.leftAnchor="415.0" AnchorPane.rightAnchor="94.4" AnchorPane.topAnchor="33.0" />
+      <Button layoutX="415.0" layoutY="33.0" mnemonicParsing="false" onAction="#onCalcCorrelationButtonClick" prefHeight="26.0" prefWidth="90.0" text="Вычислить" AnchorPane.leftAnchor="415.0" AnchorPane.topAnchor="33.0" />
    </children>
 </AnchorPane>
