--- a/src/main/resources/com/example/sociologicaldb_frontend/frames/VariationFrame.fxml
+++ b/src/main/resources/com/example/sociologicaldb_frontend/frames/VariationFrame.fxml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.*?>
-<?import javafx.scene.chart.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import java.net.URL?>
+<?import javafx.scene.chart.PieChart?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sociologicaldb_frontend.frames.VariationFrameController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sociologicaldb_frontend.frames.VariationFrameController">
    <stylesheets>
       <URL value="@../image/styles.css" />
    </stylesheets>
@@ -18,7 +28,7 @@
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="274.0" prefWidth="600.0">
                      <children>
-                        <TableView fx:id="tableView" layoutX="63.0" layoutY="21.0" prefHeight="234.0" prefWidth="484.0" />
+                        <TableView fx:id="tableView" layoutX="63.0" layoutY="21.0" prefHeight="234.0" prefWidth="484.0" AnchorPane.bottomAnchor="5.400000000000006" AnchorPane.leftAnchor="63.0" AnchorPane.rightAnchor="52.799999999999955" AnchorPane.topAnchor="20.80000000000001" />
                      </children>
                   </AnchorPane>
                </content>
@@ -26,7 +36,7 @@
             <Tab text="Графики">
                <content>
                   <AnchorPane fx:id="graphPane" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                     <PieChart fx:id="pieChart" layoutX="70.0" layoutY="30.0" prefHeight="200.0" prefWidth="450.0" />
+                     <PieChart fx:id="pieChart" layoutX="70.0" layoutY="30.0" prefHeight="200.0" prefWidth="450.0" AnchorPane.bottomAnchor="30.400000000000006" AnchorPane.leftAnchor="70.0" AnchorPane.rightAnchor="79.20000000000005" AnchorPane.topAnchor="30.0" />
                   </AnchorPane>
                </content>
             </Tab>
@@ -63,6 +73,6 @@
             <CheckBox fx:id="varCheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="183.0" text="Без группировки значений" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
-      <Button layoutX="415.0" layoutY="33.0" mnemonicParsing="false" onAction="#onCalcVariationButtonClick" prefHeight="26.0" prefWidth="90.0" text="Вычислить" AnchorPane.leftAnchor="415.0" AnchorPane.rightAnchor="94.4" AnchorPane.topAnchor="33.0" />
+      <Button layoutX="415.0" layoutY="33.0" mnemonicParsing="false" onAction="#onCalcVariationButtonClick" prefHeight="26.0" prefWidth="90.0" text="Вычислить" AnchorPane.leftAnchor="415.0" AnchorPane.topAnchor="33.0" />
    </children>
 </AnchorPane>
