--- a/src/main/resources/com/example/sociologicaldb_frontend/frames/MaiStepOneFrame.fxml
+++ b/src/main/resources/com/example/sociologicaldb_frontend/frames/MaiStepOneFrame.fxml
@@ -1,33 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TreeView?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<?import javafx.scene.image.Image?>
-<?import java.net.URL?>
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="475.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sociologicaldb_frontend.frames.MAIStepOneFrameController" >
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="475.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sociologicaldb_frontend.frames.MAIStepOneFrameController">
    <stylesheets>
       <URL value="@../image/styles.css" />
    </stylesheets>
    <children>
-      <TreeView fx:id="treeView" layoutX="14.0" layoutY="14.0" prefHeight="375.0" prefWidth="299.0" />
-      <ImageView fx:id="logoImage" fitHeight="55.0" fitWidth="55.0" layoutX="420.0" layoutY="345.0" pickOnBounds="true" preserveRatio="true">
+      <TreeView fx:id="treeView" layoutX="14.0" layoutY="14.0" prefHeight="375.0" prefWidth="299.0" AnchorPane.bottomAnchor="10.400000000000034" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="161.40000000000003" AnchorPane.topAnchor="14.0" />
+      <ImageView fx:id="logoImage" fitHeight="55.0" fitWidth="55.0" layoutX="420.0" layoutY="345.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <image>
             <Image url="@../image/unn_logo.png" />
          </image>
       </ImageView>
-      <Button layoutX="349.0" layoutY="20.0" mnemonicParsing="false" onAction="#onAddButtonClick" prefHeight="26.0" prefWidth="90.0" text="Добавить" />
-      <Button layoutX="349.0" layoutY="292.0" mnemonicParsing="false" onAction="#onNextButtonClick" prefHeight="26.0" prefWidth="90.0" text="Далее" />
-      <RadioButton fx:id="addNodeRadioButton" layoutX="332.0" layoutY="68.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="125.0" text="Добавить узел" />
-      <RadioButton fx:id="addAttributeRadioButton" layoutX="331.0" layoutY="121.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="126.0" text="Добавить атрибут" />
-      <ComboBox fx:id="attributeTableComboBox" layoutX="331.0" layoutY="148.0" prefHeight="26.0" prefWidth="126.0" visible="false" />
-      <ComboBox fx:id="attributeComboBox" layoutX="331.0" layoutY="178.0" prefHeight="26.0" prefWidth="126.0" visible="false" />
-      <TextField fx:id="nodeTextField" layoutX="331.0" layoutY="95.0" prefHeight="26.0" prefWidth="126.0" visible="false" />
+      <Button layoutX="349.0" layoutY="20.0" mnemonicParsing="false" onAction="#onAddButtonClick" prefHeight="26.0" prefWidth="90.0" text="Добавить" AnchorPane.rightAnchor="35.599999999999994" AnchorPane.topAnchor="20.0" />
+      <Button layoutX="349.0" layoutY="292.0" mnemonicParsing="false" onAction="#onNextButtonClick" prefHeight="26.0" prefWidth="90.0" text="Далее" AnchorPane.rightAnchor="35.599999999999994" />
+      <RadioButton fx:id="addNodeRadioButton" layoutX="332.0" layoutY="68.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="125.0" text="Добавить узел" AnchorPane.rightAnchor="17.400000000000006" />
+      <RadioButton fx:id="addAttributeRadioButton" layoutX="331.0" layoutY="121.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="126.0" text="Добавить атрибут" AnchorPane.rightAnchor="17.60000000000005" />
+      <ComboBox fx:id="attributeTableComboBox" layoutX="331.0" layoutY="148.0" prefHeight="26.0" prefWidth="126.0" visible="false" AnchorPane.rightAnchor="17.599999999999994" />
+      <ComboBox fx:id="attributeComboBox" layoutX="331.0" layoutY="178.0" prefHeight="26.0" prefWidth="126.0" visible="false" AnchorPane.rightAnchor="17.599999999999994" />
+      <TextField fx:id="nodeTextField" layoutX="331.0" layoutY="95.0" prefHeight="26.0" prefWidth="126.0" visible="false" AnchorPane.rightAnchor="17.599999999999994" />
    </children>
 </AnchorPane>
