--- a/src/main/resources/com/example/sociologicaldb_frontend/frames/MaiStepTwoFrame.fxml
+++ b/src/main/resources/com/example/sociologicaldb_frontend/frames/MaiStepTwoFrame.fxml
@@ -1,28 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
+<?import java.net.URL?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TreeView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="646.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sociologicaldb_frontend.frames.MAIStepTwoFrameController">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="646.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sociologicaldb_frontend.frames.MAIStepTwoFrameController">
     <stylesheets>
         <URL value="@../image/styles.css" />
     </stylesheets>
     <children>
       <Label layoutX="14.0" layoutY="14.0" prefHeight="20.0" prefWidth="155.0" text="Введите нижнюю границу:" />
       <TextField fx:id="lowborderTextField" layoutX="169.0" layoutY="11.0" prefHeight="26.0" prefWidth="67.0" />
-      <Button layoutX="386.0" onAction="#onAddRelationButtonClick" layoutY="11.0" mnemonicParsing="false" text="Добавить соотношение" AnchorPane.rightAnchor="120.0" AnchorPane.topAnchor="11.0" />
-      <Button layoutX="553.0" onAction="#onCalcMAIButtonClick" layoutY="11.0" mnemonicParsing="false" text="Вычислить" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="11.0" />
-      <TreeView fx:id="treeView" layoutX="9.0" layoutY="45.0" prefHeight="346.0" prefWidth="220.0" />
+      <Button layoutX="386.0" layoutY="11.0" mnemonicParsing="false" onAction="#onAddRelationButtonClick" text="Добавить соотношение" AnchorPane.rightAnchor="120.0" AnchorPane.topAnchor="11.0" />
+      <Button layoutX="553.0" layoutY="11.0" mnemonicParsing="false" onAction="#onCalcMAIButtonClick" text="Вычислить" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="11.0" />
+      <TreeView fx:id="treeView" layoutX="9.0" layoutY="45.0" prefHeight="346.0" prefWidth="220.0" AnchorPane.bottomAnchor="8.600000000000023" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="417.20000000000005" AnchorPane.topAnchor="44.80000000000001" />
       <ImageView fitHeight="55.0" fitWidth="55.0" layoutX="645.0" layoutY="345.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
         <image>
             <Image url="@../image/unn_logo.png" />
         </image>
       </ImageView>
-      <ScrollPane layoutX="235.0" layoutY="45.0" prefHeight="300.0" prefWidth="428.0" AnchorPane.bottomAnchor="55.0" AnchorPane.leftAnchor="235.0" AnchorPane.rightAnchor="7.0">
+      <ScrollPane layoutX="235.0" layoutY="44.8" prefHeight="300.0" prefWidth="405.0" AnchorPane.bottomAnchor="55.0" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="45.0">
         <content>
-            <VBox fx:id="contentBox" >
+            <VBox fx:id="contentBox">
             </VBox>
         </content>
       </ScrollPane>
