--- a/src/main/resources/com/example/sociologicaldb_frontend/frames/MaiStepOneFrame.fxml
+++ b/src/main/resources/com/example/sociologicaldb_frontend/frames/MaiStepOneFrame.fxml
@@ -12,13 +12,13 @@
 
 <AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="475.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sociologicaldb_frontend.frames.MAIStepOneFrameController">
    <stylesheets>
-      <URL value="@../image/styles.css" />
+      <URL value="@../style/styles.css" />
    </stylesheets>
    <children>
       <TreeView fx:id="treeView" layoutX="14.0" layoutY="14.0" prefHeight="375.0" prefWidth="299.0" AnchorPane.bottomAnchor="10.400000000000034" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="161.40000000000003" AnchorPane.topAnchor="14.0" />
       <ImageView fx:id="logoImage" fitHeight="55.0" fitWidth="55.0" layoutX="420.0" layoutY="345.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <image>
-            <Image url="@../image/unn_logo.png" />
+            <Image url="@../style/unn_logo.png" />
          </image>
       </ImageView>
       <Button layoutX="349.0" layoutY="20.0" mnemonicParsing="false" onAction="#onAddButtonClick" prefHeight="26.0" prefWidth="90.0" text="Добавить" AnchorPane.rightAnchor="35.599999999999994" AnchorPane.topAnchor="20.0" />
