--- a/src/main/resources/com/example/sociologicaldb_frontend/frames/MaiStepTwoFrame.fxml
+++ b/src/main/resources/com/example/sociologicaldb_frontend/frames/MaiStepTwoFrame.fxml
@@ -13,7 +13,7 @@
 
 <AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="646.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sociologicaldb_frontend.frames.MAIStepTwoFrameController">
     <stylesheets>
-        <URL value="@../image/styles.css" />
+        <URL value="@../style/styles.css" />
     </stylesheets>
     <children>
       <Label layoutX="14.0" layoutY="14.0" prefHeight="20.0" prefWidth="155.0" text="Введите нижнюю границу:" />
@@ -23,7 +23,7 @@
       <TreeView fx:id="treeView" layoutX="9.0" layoutY="45.0" prefHeight="346.0" prefWidth="220.0" AnchorPane.bottomAnchor="8.600000000000023" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="417.20000000000005" AnchorPane.topAnchor="44.80000000000001" />
       <ImageView fitHeight="55.0" fitWidth="55.0" layoutX="645.0" layoutY="345.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
         <image>
-            <Image url="@../image/unn_logo.png" />
+            <Image url="@../style/unn_logo.png" />
         </image>
       </ImageView>
       <ScrollPane layoutX="235.0" layoutY="44.8" prefHeight="300.0" prefWidth="405.0" AnchorPane.bottomAnchor="55.0" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="45.0">
