--- a/src/main/resources/com/example/sociologicaldb_frontend/frames/UploadFrame.fxml
+++ b/src/main/resources/com/example/sociologicaldb_frontend/frames/UploadFrame.fxml
@@ -7,7 +7,7 @@
 
 <AnchorPane prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sociologicaldb_frontend.frames.UploadFrameController">
    <stylesheets>
-      <URL value="@../image/styles.css" />
+      <URL value="@../style/styles.css" />
    </stylesheets>
    <children>
       <Label alignment="CENTER_RIGHT" layoutX="85.0" layoutY="90.0" prefHeight="33.0" prefWidth="163.0" text="Название исследования:" />
@@ -19,7 +19,7 @@
        -->
       <ImageView fx:id="logoImage" fitHeight="55.0" fitWidth="55.0" layoutX="446.0" layoutY="292.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <image>
-            <Image url="@../image/unn_logo.png" />
+            <Image url="@../style/unn_logo.png" />
          </image>
       </ImageView>
       <Label fx:id="statusLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="175.0" layoutY="256.0" prefHeight="30.0" prefWidth="220.0" AnchorPane.bottomAnchor="68.0" AnchorPane.leftAnchor="150.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="256.0" />
