--- a/src/main/resources/com/example/sociologicaldb_frontend/style/styles.css
+++ b/src/main/resources/com/example/sociologicaldb_frontend/style/styles.css
@@ -7,12 +7,13 @@
     -fx-background-color: #2132f3;
 }
 
-.tree-cell:selected {
+.tree-cell:focused:selected {
     -fx-background-color: #0f68aa;
+    -fx-text-fill: white;
 }
 
 .menu:hover {
-    -fx-background-color: #0f68aa;
+    -fx-background-color: #0f68aa,
 }
 .menu-item:hover {
     -fx-background-color: #0f68aa;
@@ -20,13 +21,13 @@
 
 .combo-box-base {
     -fx-background-color: white;
-    -fx-border-color: gray; /* Цвет границы */
-    -fx-border-width: 1;     /* Ширина границы */
-    -fx-border-radius: 4;    /* Радиус скругления углов границы */
+    -fx-border-color: gray;
+    -fx-border-width: 1;
+    -fx-border-radius: 4;
 }
 
 .combo-box-base .arrow-button .arrow {
-    -fx-background-color: black; /* Цвет стрелки */
+    -fx-background-color: black;
 }
 
 .table-view .column-header {
@@ -35,4 +36,7 @@
 }
 .table-view .column-header .label {
     -fx-text-fill: white;
+}
+.table-view .column-header .arrow {
+    -fx-background-color: white
 }
